@@ -516,17 +516,17 @@ public class JSONObject {
 	}
 
 	public JSONObject put(String key, double value) throws JSONException {
-		this.put(key, new Double(value));
+		this.put(key, Double.valueOf(value));
 		return this;
 	}
 
 	public JSONObject put(String key, int value) throws JSONException {
-		this.put(key, new Integer(value));
+		this.put(key, Integer.valueOf(value));
 		return this;
 	}
 
 	public JSONObject put(String key, long value) throws JSONException {
-		this.put(key, new Long(value));
+		this.put(key, Long.valueOf(value));
 		return this;
 	}
 
@@ -661,9 +661,9 @@ public class JSONObject {
 						return d;
 					}
 				} else {
-					Long myLong = new Long(string);
+					Long myLong = Long.valueOf(string);
 					if (myLong.longValue() == myLong.intValue()) {
-						return new Integer(myLong.intValue());
+						return Integer.valueOf(myLong.intValue());
 					} else {
 						return myLong;
 					}
